# savesong

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  STACK.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
docker/: Dockerfile
docs/: matching.md
scripts/: demo_cli.py  demo_web.py  eval_matcher.py  gen_fixtures.py
site/: index.html
src/savesong/: __init__.py  config.py  errors.py  models.py  worker.py
src/savesong/assets/: cc_sample.opus
src/savesong/cli/: __init__.py  main.py  progress.py  review.py
src/savesong/core/: __init__.py  converter.py  downloader.py  library.py  m3u.py  matcher.py  organizer.py  pipeline.py  tagger.py
src/savesong/core/resolvers/: __init__.py  base.py  detect.py  soundcloud.py  spotify.py  ytmusic.py
src/savesong/db/: __init__.py  engine.py  migrate.py  seed.py  tables.py
src/savesong/db/alembic/: env.py
src/savesong/db/alembic/versions/: 0001_initial.py
src/savesong/web/: __init__.py  app.py  jobs.py  routes.py  sse.py
tests/: conftest.py
tests/fixtures/: labeled_matches.json  spotify_playlist.json  ytm_search_results.json
tests/integration/: test_cli.py  test_downloader.py  test_library.py  test_pipeline.py  test_resolver_spotify.py  test_resolvers_ytdlp.py  test_review.py  test_seed.py  test_tagger.py  test_web.py  test_worker.py
tests/unit/: test_config.py  test_converter.py  test_detect.py  test_m3u.py  test_matcher.py  test_organizer.py  test_worker_settings.py
web/: eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/src/: App.tsx
web/src/components/: JobCard.test.tsx  JobCard.tsx  TrackRow.tsx
web/src/lib/: api.test.ts  api.ts
web/src/pages/: Library.tsx  Queue.tsx
